main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalr-affinity
spec:
  selector:
    app: signalr-affinity
  ports:
    - port: 8000
      targetPort: 9000
