main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-signalr-affinity
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: signalr-affinity
              port:
                number: 80
